[package]
name    = "esp-hal-embassy-procmacros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling          = "0.20.3"
litrs            = "0.4.1"
object           = "0.32.1"
proc-macro-crate = "2.0.0"
proc-macro-error = "1.0.4"
proc-macro2      = "1.0.69"
quote            = "1.0.33"
syn              = { version = "2.0.38", features = ["extra-traits", "full"] }
