[package]
name          = "esp-hal-embassy"
version       = "0.7.0"
edition       = "2024"
rust-version  = "1.85.0"
description   = "Embassy support for esp-hal"
documentation = "https://docs.espressif.com/projects/rust/esp-hal-embassy/latest/"
keywords      = ["async", "embedded", "esp32", "espressif"]
categories    = ["asynchronous", "embedded", "hardware-support", "no-std"]
repository    = "https://github.com/esp-rs/esp-hal"
license       = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"
features       = ["esp32c6"]

[lib]
bench = false
test  = false

[dependencies]
critical-section          = "1.2.0"
defmt                     = { version = "0.3.10", optional = true }
document-features         = "0.2.11"
embassy-executor          = { version = "0.7.0", features = ["timer-item-payload-size-4"], optional = true }
embassy-sync              = { version = "0.6.2" }
embassy-time              = { version = "0.4.0" }
embassy-time-driver       = { version = "0.2.0", features = [ "tick-hz-1_000_000" ] }
embassy-time-queue-utils  = { version = "0.1.0", features = ["_generic-queue"] }
esp-config                = { version = "0.3.0", path = "../esp-config" }
esp-hal                   = { version = "1.0.0-beta.0", path = "../esp-hal" }
log                       = { version = "0.4.26", optional = true }
macros                    = { version = "0.17.0", features = ["embassy"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
portable-atomic           = "1.11.0"
static_cell               = "2.1.0"

[build-dependencies]
esp-build    = { version = "0.2.0", path = "../esp-build" }
esp-config   = { version = "0.3.0", path = "../esp-config", features = ["build"] }
esp-metadata = { version = "0.6.0", path = "../esp-metadata" }

[features]
default = ["executors"]

esp32   = ["esp-hal/esp32"]
esp32c2 = ["esp-hal/esp32c2"]
esp32c3 = ["esp-hal/esp32c3"]
esp32c6 = ["esp-hal/esp32c6"]
esp32h2 = ["esp-hal/esp32h2"]
esp32s2 = ["esp-hal/esp32s2"]
esp32s3 = ["esp-hal/esp32s3"]

## Implement `defmt::Format` on certain types.
defmt = ["dep:defmt", "embassy-executor?/defmt", "esp-hal/defmt"]
## Enable logging via the log crate
log = ["dep:log"]
## Provide `Executor` and `InterruptExecutor`
executors = ["dep:embassy-executor", "esp-hal/__esp_hal_embassy"]

[lints.rust]
unexpected_cfgs = "allow"
