[package]
name          = "esp-hal-embassy"
version       = "0.9.0"
edition       = "2024"
rust-version  = "1.88.0"
description   = "Embassy support for esp-hal"
documentation = "https://docs.espressif.com/projects/rust/esp-hal-embassy/latest/"
keywords      = ["async", "embedded", "esp32", "espressif"]
categories    = ["asynchronous", "embedded", "hardware-support", "no-std"]
repository    = "https://github.com/esp-rs/esp-hal"
license       = "MIT OR Apache-2.0"

[package.metadata.espressif]
doc-config = { features = ["esp-hal/unstable", "esp-hal/rt", "defmt", "executors"] }
check-configs = [
    { features = ["esp-hal/unstable", "esp-hal/rt"] },
    { features = ["esp-hal/unstable", "esp-hal/rt", "defmt"] },
    { features = ["esp-hal/unstable", "esp-hal/rt", "log-04"] },
    { features = ["esp-hal/unstable", "esp-hal/rt", "defmt", "executors"] },
    { features = ["esp-hal/unstable", "esp-hal/rt", "log-04", "executors"] },
]
clippy-configs = [
    { features = ["esp-hal/unstable", "esp-hal/rt", "log-04", "executors"] },
]

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"
features       = ["esp32c6"]

[lib]
bench = false
test  = false

[dependencies]
cfg-if                    = "1.0.0"
esp-hal                   = { version = "1.0.0-rc.0", path = "../esp-hal", default-features = false, features = ["requires-unstable"] }
portable-atomic           = "1.11.0"
static_cell               = "2.1.0"

# Unstable dependencies that are not (strictly) part of the public API
document-features         = "0.2.11"
embassy-sync              = { version = "0.7.0" }
embassy-time-driver       = { version = "0.2.1", features = [ "tick-hz-1_000_000" ] }
embassy-time-queue-utils  = { version = "0.3.0", features = ["_generic-queue"] }
esp-config                = { version = "0.5.0", path = "../esp-config" }
esp-sync                  = { version = "0.0.0", path = "../esp-sync" }
macros                    = { version = "0.19.0", features = ["embassy"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }

# Optional dependencies that enable ecosystem support.
embassy-executor          = { version = "0.9.0", optional = true }
embassy-executor-timer-queue = { version = "0.1.0", features = ["timer-item-size-6-words"] }

# Logging interfaces, they are mutually exclusive so they need to be behind separate features.
defmt                     = { version = "1.0.1", optional = true }
log-04                    = { package = "log", version = "0.4.27", optional = true }

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv            = { version = "0.15.0" }

[build-dependencies]
esp-config   = { version = "0.5.0", path = "../esp-config", features = ["build"] }
esp-metadata-generated = { version = "0.1.0", path = "../esp-metadata-generated", features = ["build-script"] }

[features]
default = ["executors"]

esp32   = ["esp-hal/esp32", "esp-sync/esp32"]
esp32c2 = ["esp-hal/esp32c2", "esp-sync/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-sync/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-sync/esp32c6"]
esp32h2 = ["esp-hal/esp32h2", "esp-sync/esp32h2"]
esp32s2 = ["esp-hal/esp32s2", "esp-sync/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-sync/esp32s3"]

## Enable the `Executor` and `InterruptExecutor` embassy executor implementations.
executors = ["dep:embassy-executor", "esp-hal/__esp_hal_embassy"]

#! ### Logging Feature Flags
## Enable logging output using version 0.4 of the `log` crate.
log-04 = ["dep:log-04"]
## Enable logging output using `defmt` and implement `defmt::Format` on certain types.
defmt = ["dep:defmt", "embassy-executor?/defmt", "esp-hal/defmt"]

[lints.rust]
unexpected_cfgs = "allow"
