[package]
name          = "esp-hal-procmacros"
version       = "0.20.0"
edition       = "2024"
rust-version  = "1.88.0"
description   = "Procedural macros for esp-hal"
documentation = "https://docs.espressif.com/projects/rust/esp-hal-procmacros/latest/"
repository    = "https://github.com/esp-rs/esp-hal"
license       = "MIT OR Apache-2.0"

[package.metadata.espressif]
doc-config = { features = [] }
check-configs = [
    { features = [] },
]
clippy-configs = [
    { features = [] },
]

[package.metadata.docs.rs]
features = ["has-ulp-core", "interrupt", "ram", "is-ulp-core"]

[lib]
proc-macro = true

[dependencies]
document-features = "0.2"
object            = { version = "0.37", default-features = false, features = ["read_core", "elf"], optional = true }
proc-macro-crate  = "3.4"
proc-macro2       = "1.0"
quote             = "1.0"
syn               = { version = "2.0", features = ["extra-traits", "full"] }
termcolor         = "1.4"

[features]
## Indicates the target device has RTC slow memory available.
rtc-slow = []

#! ### Low-power Core Feature Flags
## Indicate that the SoC contains an LP core.
has-lp-core = ["dep:object"]
## Indicate that the SoC contains a ULP core.
has-ulp-core = ["dep:object"]
## Provide an `#[entry]` macro for running applications on the ESP32-C6's
## LP core.
is-lp-core = []
## Provide an `#[entry]` macro for running applications on the ESP32-S2/S3's
## ULP core.
is-ulp-core = []
