[package]
name         = "esp-hal-smartled"
version      = "0.7.0"
edition      = "2021"
rust-version = "1.67.0"
description  = "RMT adapter for smartleds"
repository   = "https://github.com/esp-rs/esp-hal"
license      = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["esp32c3"]

[dependencies]
defmt            = { version = "=0.3.5", optional = true }
esp-hal-common   = { version = "0.14.1", path = "../esp-hal-common" }
fugit            = "0.3.7"
smart-leds-trait = "0.2.1"

[features]
esp32   = ["esp-hal-common/esp32"]
esp32c3 = ["esp-hal-common/esp32c3"]
esp32c6 = ["esp-hal-common/esp32c6"]
esp32h2 = ["esp-hal-common/esp32h2"]
esp32s2 = ["esp-hal-common/esp32s2"]
esp32s3 = ["esp-hal-common/esp32s3"]

xtal-26mhz = ["esp-hal-common/xtal-26mhz"]
xtal-40mhz = ["esp-hal-common/xtal-40mhz"]

defmt = ["dep:defmt", "esp-hal-common/defmt"]

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
embassy-futures  = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
embassy-sync     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
embassy-time     = { git = "https://github.com/embassy-rs/embassy", rev = "0027a76" }
